plugins/tools/svgtexttool/SvgTextEditor.cpp
@@ -75,12 +75,171 @@
 #include "FontSizeAction.h"
 #include "kis_signals_blocker.h"
 
+
+class SvgTextEditor::Private
+{
+public:
+
+    Private() {}
+
+    // collection of last-used properties
+    QColor fontColor {Qt::black};
+    //QColor backgroundColor {Qt::transparent};
+    qreal fontSize {10.0};
+    QFont font;
+
+    qreal letterSpacing {0.0};
+
+    bool bold {false};
+    bool italic {false};
+    bool underline {false};
+
+    bool strikeThrough {false};
+    bool superscript {false};
+    bool subscript {false};
+
+    // unsupported properties:
+    // backgroundColor - because there is no button for that
+    // horizontal alignment - it seems to work without saving
+    // line height - it seems to work without saving
+
+    void saveFromWidgets(KActionCollection* actions)
+    {
+
+        FontSizeAction *fontSizeAction = qobject_cast<FontSizeAction*>(actions->action("svg_font_size"));
+        fontSize = fontSizeAction->fontSize();
+
+        KisFontComboBoxes* fontComboBox2 = qobject_cast<KisFontComboBoxes*>(qobject_cast<QWidgetAction*>(actions->action("svg_font"))->defaultWidget());
+        font = fontComboBox2->currentFont(fontSize);
+
+        KoColorPopupAction *fontColorAction = qobject_cast<KoColorPopupAction*>(actions->action("svg_format_textcolor"));
+        fontColor = fontColorAction->currentColor();
+
+        QWidgetAction *letterSpacingAction = qobject_cast<QWidgetAction*>(actions->action("svg_letter_spacing"));
+        letterSpacing = qobject_cast<QDoubleSpinBox*>(letterSpacingAction->defaultWidget())->value();
+
+        saveBoolActionFromWidget(actions, "svg_weight_bold", bold);
+        saveBoolActionFromWidget(actions, "svg_format_italic", italic);
+        saveBoolActionFromWidget(actions, "svg_format_underline", underline);
+
+        saveBoolActionFromWidget(actions, "svg_format_strike_through", strikeThrough);
+        saveBoolActionFromWidget(actions, "svg_format_superscript", superscript);
+        saveBoolActionFromWidget(actions, "svg_format_subscript", subscript);
+
+    }
+
+    void setSavedToWidgets(KActionCollection* actions)
+    {
+
+        FontSizeAction *fontSizeAction = qobject_cast<FontSizeAction*>(actions->action("svg_font_size"));
+        fontSizeAction->setFontSize(fontSize);
+
+        KisFontComboBoxes* fontComboBox2 = qobject_cast<KisFontComboBoxes*>(qobject_cast<QWidgetAction*>(actions->action("svg_font"))->defaultWidget());
+        fontComboBox2->setCurrentFont(font);
+
+        KoColorPopupAction *fontColorAction = qobject_cast<KoColorPopupAction*>(actions->action("svg_format_textcolor"));
+        fontColorAction->setCurrentColor(fontColor);
+
+        QWidgetAction *letterSpacingAction = qobject_cast<QWidgetAction*>(actions->action("svg_letter_spacing"));
+        qobject_cast<QDoubleSpinBox*>(letterSpacingAction->defaultWidget())->setValue(letterSpacing);
+
+        setBoolActionToWidget(actions, "svg_weight_bold", bold);
+        setBoolActionToWidget(actions, "svg_format_italic", italic);
+
+        setSavedLineDecorationToWidgets(actions);
+
+        setBoolActionToWidget(actions, "svg_format_superscript", superscript);
+        setBoolActionToWidget(actions, "svg_format_subscript", subscript);
+    }
+
+    void setSavedToFormat(QTextCharFormat &format)
+    {
+
+        format.setFont(font);
+        format.setFontPointSize(fontSize);
+        format.setForeground(fontColor);
+
+        format.setFontLetterSpacingType(QFont::AbsoluteSpacing);
+        format.setFontLetterSpacing(letterSpacing);
+
+        format.setFontUnderline(underline);
+        format.setFontStrikeOut(strikeThrough);
+        format.setFontOverline(false);
+
+        if (subscript) {
+            format.setVerticalAlignment(QTextCharFormat::AlignSubScript);
+        } else if (superscript) {
+            format.setVerticalAlignment(QTextCharFormat::AlignSuperScript);
+        } else {
+            format.setVerticalAlignment(QTextCharFormat::AlignMiddle);
+        }
+
+        if (bold) {
+            format.setFontWeight(QFont::Bold);
+        }
+
+        format.setFontItalic(italic);
+
+    }
+
+    void saveFontLineDecoration(KoSvgText::TextDecoration decoration)
+    {
+        // Krita for now cannot handle both at the same time; and there is no way to set overline
+        // FIXME: Krita should support all three at the same time
+        // (It does support it in SVG)
+        switch (decoration) {
+        case KoSvgText::DecorationUnderline:
+            underline = true;
+            strikeThrough = false;
+            break;
+        case KoSvgText::DecorationLineThrough:
+            underline = false;
+            strikeThrough = true;
+            break;
+        case KoSvgText::DecorationOverline:
+            Q_FALLTHROUGH();
+        case KoSvgText::DecorationNone:
+            Q_FALLTHROUGH();
+         default:
+            underline = false;
+            strikeThrough = false;
+            break;
+        }
+    }
+
+
+    void setSavedLineDecorationToWidgets(KActionCollection* actions)
+    {
+        setBoolActionToWidget(actions, "svg_format_underline", underline);
+        setBoolActionToWidget(actions, "svg_format_strike_through", strikeThrough);
+    }
+
+private:
+
+    void saveBoolActionFromWidget(KActionCollection* actions, QString actionName, bool &variable)
+    {
+        QAction *boolAction = actions->action(actionName);
+        KIS_ASSERT_RECOVER_RETURN(boolAction);
+        variable = boolAction->isChecked();
+    }
+
+    void setBoolActionToWidget(KActionCollection* actions, QString actionName, bool variable)
+    {
+        QAction *boolAction = actions->action(actionName);
+        KIS_ASSERT_RECOVER_RETURN(boolAction);
+        boolAction->setChecked(variable);
+    }
+
+};
+
+
 SvgTextEditor::SvgTextEditor(QWidget *parent, Qt::WindowFlags flags)
     : KXmlGuiWindow(parent, flags)
     , m_page(new QWidget(this))
 #ifndef Q_OS_WIN
     , m_charSelectDialog(new KoDialog(this))
 #endif
+    , d(new Private())
 {
     m_textEditorWidget.setupUi(m_page);
     setCentralWidget(m_page);
@@ -216,6 +375,20 @@ void SvgTextEditor::setShape(KoSvgTextShape *shape)
     }
     KisFontComboBoxes* fontComboBox = qobject_cast<KisFontComboBoxes*>(qobject_cast<QWidgetAction*>(actionCollection()->action("svg_font"))->defaultWidget());
     fontComboBox->setInitialized();
+
+    KConfigGroup cfg(KSharedConfig::openConfig(), "SvgTextTool");
+
+    d->saveFromWidgets(actionCollection());
+
+    QTextCursor cursor = m_textEditorWidget.richTextEdit->textCursor();
+    QTextCharFormat format = cursor.blockCharFormat();
+
+    d->setSavedToFormat(format);
+
+    KisSignalsBlocker b(m_textEditorWidget.richTextEdit);
+    cursor.setBlockCharFormat(format);
+
+
 }
 
 void SvgTextEditor::save()
@@ -360,23 +533,12 @@ void SvgTextEditor::slotFixUpEmptyTextBlock()
         QTextCursor cursor = m_textEditorWidget.richTextEdit->textCursor();
         QTextCharFormat format = cursor.blockCharFormat();
 
-        {
-            FontSizeAction *fontSizeAction = qobject_cast<FontSizeAction*>(actionCollection()->action("svg_font_size"));
-            KisFontComboBoxes* fontComboBox = qobject_cast<KisFontComboBoxes*>(qobject_cast<QWidgetAction*>(actionCollection()->action("svg_font"))->defaultWidget());
-            format.setFont(fontComboBox->currentFont(fontSizeAction->fontSize()));
-        }
-
-        {
-            KoColorPopupAction *fgColorPopup = qobject_cast<KoColorPopupAction*>(actionCollection()->action("svg_format_textcolor"));
-            format.setForeground(fgColorPopup->currentColor());
-        }
-
-        {
-            //KoColorPopupAction *bgColorPopup = qobject_cast<KoColorPopupAction*>(actionCollection()->action("svg_background_color"));
-            //format.setBackground(bgColorPopup->currentColor());
-        }
 
         KisSignalsBlocker b(m_textEditorWidget.richTextEdit);
+
+        d->setSavedToFormat(format);
+        d->setSavedToWidgets(actionCollection());
+
         cursor.setBlockCharFormat(format);
     }
 }
@@ -529,6 +691,7 @@ void SvgTextEditor::setTextBold(QFont::Weight weight)
             cursor.insertText(selectionModified);
         }
     }
+    d->bold = weight == QFont::Bold;
 }
 
 void SvgTextEditor::setTextWeightLight()
@@ -570,9 +733,14 @@ void SvgTextEditor::setTextItalic(QFont::Style style)
 
     if (style == QFont::StyleItalic) {
         fontStyle = "italic";
-    } else if(style == QFont::StyleOblique) {
+        d->italic = true;
+    } else if (style == QFont::StyleOblique) {
         fontStyle = "oblique";
+        d->italic = true;
+    } else {
+        d->italic = false;
     }
+
 
     if (m_textEditorWidget.textTab->currentIndex() == Richtext) {
         QTextCharFormat format;
@@ -642,6 +810,9 @@ void SvgTextEditor::setTextDecoration(KoSvgText::TextDecoration decor)
         }
     }
     m_textEditorWidget.richTextEdit->setTextCursor(cursor);
+
+    d->saveFontLineDecoration(decor);
+    d->setSavedLineDecorationToWidgets(actionCollection());
 }
 
 void SvgTextEditor::setTextUnderline()
@@ -664,8 +835,11 @@ void SvgTextEditor::setTextSubscript()
     QTextCharFormat format = m_textEditorWidget.richTextEdit->textCursor().charFormat();
     if (format.verticalAlignment()==QTextCharFormat::AlignSubScript) {
         format.setVerticalAlignment(QTextCharFormat::AlignNormal);
+        d->subscript = false;
     } else {
         format.setVerticalAlignment(QTextCharFormat::AlignSubScript);
+        d->subscript = true;
+        d->superscript = false;
     }
     m_textEditorWidget.richTextEdit->mergeCurrentCharFormat(format);
 }
@@ -675,8 +849,11 @@ void SvgTextEditor::setTextSuperScript()
     QTextCharFormat format = m_textEditorWidget.richTextEdit->textCursor().charFormat();
     if (format.verticalAlignment()==QTextCharFormat::AlignSuperScript) {
         format.setVerticalAlignment(QTextCharFormat::AlignNormal);
+        d->superscript = false;
     } else {
         format.setVerticalAlignment(QTextCharFormat::AlignSuperScript);
+        d->superscript = true;
+        d->subscript = false;
     }
     m_textEditorWidget.richTextEdit->mergeCurrentCharFormat(format);
 }
@@ -690,6 +867,7 @@ void SvgTextEditor::increaseTextSize()
         pointSize = m_textEditorWidget.richTextEdit->textCursor().charFormat().font().pixelSize();
     }
     format.setFontPointSize(pointSize+1.0);
+    d->fontSize = format.fontPointSize();
     m_textEditorWidget.richTextEdit->mergeCurrentCharFormat(format);
     m_textEditorWidget.richTextEdit->setTextCursor(oldCursor);
 }
@@ -703,6 +881,7 @@ void SvgTextEditor::decreaseTextSize()
         pointSize = m_textEditorWidget.richTextEdit->textCursor().charFormat().font().pixelSize();
     }
     format.setFontPointSize(qMax(pointSize-1.0, 1.0));
+    d->fontSize = format.fontPointSize();
     m_textEditorWidget.richTextEdit->mergeCurrentCharFormat(format);
     m_textEditorWidget.richTextEdit->setTextCursor(oldCursor);
 }
@@ -733,6 +912,7 @@ void SvgTextEditor::setLetterSpacing(double letterSpacing)
             cursor.insertText(selectionModified);
         }
     }
+    d->letterSpacing = letterSpacing;
 }
 
 void SvgTextEditor::alignLeft()
@@ -903,6 +1083,8 @@ void SvgTextEditor::setFontColor(const KoColor &c)
             cursor.insertText(selectionModified);
         }
     }
+    // save last used color to be used when the editor is cleared
+    d->fontColor = color;
 }
 
 void SvgTextEditor::setBackgroundColor(const KoColor &c)
@@ -957,6 +1139,8 @@ void SvgTextEditor::setFont(const QString &fontName)
             cursor.insertText(selectionModified);
         }
     }
+    // save last used font to be used when the editor is cleared
+    d->font = font;
 }
 
 void SvgTextEditor::setFontSize(qreal fontSize)
@@ -975,6 +1159,8 @@ void SvgTextEditor::setFontSize(qreal fontSize)
             cursor.insertText(selectionModified);
         }
     }
+    // set last used font size to be used when the editor is cleared
+    d->fontSize = fontSize;
 }
 
 void SvgTextEditor::setBaseline(KoSvgText::BaselineShiftMode)
